--- a/CriptoBeginners/Home/templates/trade.html
+++ b/CriptoBeginners/Home/templates/trade.html
@@ -5,6 +5,15 @@
 <a class="btn btn-secondary btn-sm" href="/"><</a>
 <span class="fs-2">Trade</span>
 <hr>
+<a class="nav-link dropdown-toggle m-4" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Languages
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+    <li><a class="dropdown-item" href="#">EN</a></li>
+    <li><a class="dropdown-item" href="#">MK</a></li>
+    <li><a class="dropdown-item" href="#">RS</a></li>
+    <li><a class="dropdown-item" href="#">ESP</a></li>
+  </ul>
 <div class="container">
     <div class="fs-3">
         How to exchange cryptocurrency 
